--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,7 @@
   <nav class="nav">
     <div class="nav__inner">
       <a href="index.html" class="nav__logo">
-        <div class="nav__logo-icon">F</div>
-        Flexi Personnel
+        <img src="img/logo.png" alt="Flexi Personnel">
       </a>
       <div class="nav__links">
         <a href="index.html" class="nav__link">Home</a>
@@ -150,8 +149,7 @@
       <div class="footer__grid">
         <div class="footer__brand">
           <div class="footer__brand-name">
-            <div class="nav__logo-icon" style="width:36px;height:36px;font-size:var(--text-base);">F</div>
-            Flexi Personnel
+            <img src="img/logo.png" alt="Flexi Personnel">
           </div>
           <p>Melbourne's trusted recruitment and HR consulting partner. Family-owned, industry-focused, committed to finding your best.</p>
         </div>
