--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <nav class="nav">
     <div class="nav__inner">
       <a href="index.html" class="nav__logo">
-        <div class="nav__logo-icon">F</div>
-        Flexi Personnel
+        <img src="img/logo.png" alt="Flexi Personnel">
       </a>
       <div class="nav__links">
         <a href="index.html" class="nav__link active">Home</a>
@@ -28,7 +27,7 @@
         <a href="about.html" class="nav__link">About</a>
       </div>
       <div class="nav__actions">
-        <a href="contact.html" class="btn btn--primary">Get in Touch</a>
+        <a href="contact.html" class="btn btn--orange">Get in Touch</a>
       </div>
       <button class="nav__toggle" aria-label="Menu">
         <span></span>
@@ -78,7 +77,7 @@
           <a href="employers.html" class="card__link">Explore employer solutions &#8594;</a>
         </div>
         <div class="hero__card reveal reveal-delay-1">
-          <div class="hero__card-icon" style="background: var(--color-secondary-light); color: var(--color-secondary);">&#128100;</div>
+          <div class="hero__card-icon" style="background: var(--color-secondary-light); color: var(--color-orange);">&#128100;</div>
           <h4>For Job Seekers</h4>
           <p class="card__text mt-4">Whether you want permanent, temp, or contract — our consultants match your goals to the right opportunity.</p>
           <a href="jobs.html" class="card__link">Browse open roles &#8594;</a>
@@ -273,8 +272,7 @@
       <div class="footer__grid">
         <div class="footer__brand">
           <div class="footer__brand-name">
-            <div class="nav__logo-icon" style="width:36px;height:36px;font-size:var(--text-base);">F</div>
-            Flexi Personnel
+            <img src="img/logo.png" alt="Flexi Personnel">
           </div>
           <p>Melbourne's trusted recruitment and HR consulting partner. Family-owned, industry-focused, committed to finding your best.</p>
         </div>
