--- a/employers.html
+++ b/employers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>For Employers — Flexi Personnel</title>
+  <title>For Employers | Flexi Personnel</title>
   <meta name="description" content="Industry-specialist recruitment across manufacturing, construction, healthcare, professional and office sectors in Melbourne.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         For Employers
       </div>
       <h1 class="hero__title" style="font-size:clamp(2rem, 4vw, 3.2rem);">Your recruitment partner needs to understand your business</h1>
-      <p class="hero__subtitle">We structure our teams by industry — so you get consultants with real field experience in your sector, not generalists filling a desk.</p>
+      <p class="hero__subtitle">We structure our teams by industry so you get consultants with real field experience in your sector, not generalists filling a desk.</p>
     </div>
   </section>
 
@@ -60,7 +60,7 @@
       <div class="section-header section-header--center reveal">
         <div class="section-header__eyebrow">Industries We Serve</div>
         <h2 class="section-header__title">Deep expertise where it matters</h2>
-        <p class="section-header__text">Our consultants know your industry's challenges, competitive landscape, and talent pools — because they've worked in them.</p>
+        <p class="section-header__text">Our consultants know your industry's challenges, competitive landscape, and talent pools because they've worked in them.</p>
       </div>
       <div class="grid grid--3">
         <div class="industry-card reveal">
@@ -86,7 +86,7 @@
         <div class="industry-card reveal reveal-delay-1">
           <div class="industry-card__icon">&#128196;</div>
           <h4 class="industry-card__title">Office &amp; Administration</h4>
-          <p class="industry-card__text">Receptionists, executive assistants, data entry, customer service, and office managers — sourced and placed with care.</p>
+          <p class="industry-card__text">Receptionists, executive assistants, data entry, customer service, and office managers, sourced and placed with care.</p>
         </div>
         <div class="industry-card reveal reveal-delay-2">
           <div class="industry-card__icon" style="background:var(--color-secondary-light);">&#9881;&#65039;</div>
@@ -108,7 +108,7 @@
         <div class="card card--flat reveal" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#128161;</div>
           <h4 class="card__title">Industry-First Approach</h4>
-          <p class="card__text">Our teams are structured by sector. Your consultant doesn't just recruit — they know your industry inside out.</p>
+          <p class="card__text">Our teams are structured by sector. Your consultant doesn't just recruit. They know your industry inside out.</p>
         </div>
         <div class="card card--flat reveal reveal-delay-1" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#128203;</div>
@@ -118,7 +118,7 @@
         <div class="card card--flat reveal reveal-delay-2" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#128588;</div>
           <h4 class="card__title">One-Stop Shop</h4>
-          <p class="card__text">Labour hire, temp, permanent, and RPO — all from one partner. Simplify your supplier management.</p>
+          <p class="card__text">Labour hire, temp, permanent, and RPO, all from one partner. Simplify your supplier management.</p>
         </div>
       </div>
     </div>
