--- a/hr-consulting.html
+++ b/hr-consulting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HR Consulting Services — Flexi Personnel</title>
+  <title>HR Consulting Services | Flexi Personnel</title>
   <meta name="description" content="Strategic HR consulting, health checks, and staff engagement programs to strengthen your people operations.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +66,7 @@
         <div class="card reveal" style="padding:var(--space-10);">
           <div class="card__icon card__icon--blue" style="width:64px;height:64px;font-size:var(--text-3xl);">&#128202;</div>
           <h3 class="card__title" style="font-size:var(--text-xl);">HR Health Check</h3>
-          <p class="card__text" style="font-size:var(--text-base);margin-bottom:var(--space-6);">A comprehensive audit of your HR policies, processes, and compliance. We identify gaps, risks, and opportunities — then give you a clear action plan to address them.</p>
+          <p class="card__text" style="font-size:var(--text-base);margin-bottom:var(--space-6);">A comprehensive audit of your HR policies, processes, and compliance. We identify gaps, risks, and opportunities, then give you a clear action plan to address them.</p>
           <div style="display:flex;flex-direction:column;gap:var(--space-3);">
             <div style="display:flex;align-items:center;gap:var(--space-3);font-size:var(--text-sm);color:var(--color-dark-500);">
               <span style="color:var(--color-primary);">&#10003;</span> Policy & procedure review
@@ -82,7 +82,7 @@
         <div class="card reveal reveal-delay-1" style="padding:var(--space-10);">
           <div class="card__icon card__icon--green" style="width:64px;height:64px;font-size:var(--text-3xl);">&#128101;</div>
           <h3 class="card__title" style="font-size:var(--text-xl);">Staff Engagement</h3>
-          <p class="card__text" style="font-size:var(--text-base);margin-bottom:var(--space-6);">Engaged teams outperform. We design and run engagement surveys, workshops, and programs that give you real insight into what your people need — and help you act on it.</p>
+          <p class="card__text" style="font-size:var(--text-base);margin-bottom:var(--space-6);">Engaged teams outperform. We design and run engagement surveys, workshops, and programs that give you real insight into what your people need and help you act on it.</p>
           <div style="display:flex;flex-direction:column;gap:var(--space-3);">
             <div style="display:flex;align-items:center;gap:var(--space-3);font-size:var(--text-sm);color:var(--color-dark-500);">
               <span style="color:var(--color-secondary);">&#10003;</span> Engagement surveys & analysis
