--- a/jobs.html
+++ b/jobs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Job Seekers — Flexi Personnel</title>
+  <title>Job Seekers | Flexi Personnel</title>
   <meta name="description" content="Find your next role. Browse permanent, temporary, and contract opportunities across Melbourne's key industries.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         Job Seekers
       </div>
       <h1 class="hero__title" style="font-size:clamp(2rem, 4vw, 3.2rem);">Find your next opportunity</h1>
-      <p class="hero__subtitle">Whether you're looking for permanent work, a temp role, or your next contract — our consultants match your goals to the right position.</p>
+      <p class="hero__subtitle">Whether you're looking for permanent work, a temp role, or your next contract, our consultants match your goals to the right position.</p>
       <div class="hero__actions" style="margin-top:var(--space-8);">
         <a href="#jobs" class="btn btn--primary btn--lg">View Open Roles &#8595;</a>
         <a href="contact.html" class="btn btn--outline btn--lg" style="border-color:rgba(255,255,255,0.3);color:white;">Submit Your Resume</a>
@@ -72,7 +72,7 @@
         </div>
         <div class="process__step">
           <h4>Meet Your Consultant</h4>
-          <p>We take time to understand your goals, experience, and preferences — not just your resume.</p>
+          <p>We take time to understand your goals, experience, and preferences, not just your resume.</p>
         </div>
         <div class="process__step">
           <h4>Get Matched</h4>
@@ -80,7 +80,7 @@
         </div>
         <div class="process__step">
           <h4>Ongoing Support</h4>
-          <p>From start checks to performance support and training — we're with you throughout your placement.</p>
+          <p>From start checks to performance support and training, we're with you throughout your placement.</p>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
       <div class="section-header reveal">
         <div class="section-header__eyebrow">Open Roles</div>
         <h2 class="section-header__title">Current opportunities</h2>
-        <p class="section-header__text">Here's a sample of what's currently available. New roles are added daily — submit your resume to stay in the loop.</p>
+        <p class="section-header__text">Here's a sample of what's currently available. New roles are added daily, so submit your resume to stay in the loop.</p>
       </div>
 
       <!-- Filter tabs -->
@@ -123,8 +123,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Campbellfield, VIC</span>
-            <span>&#128176; $72K – $82K + super</span>
+            <span>&#128176; $72K - $82K + super</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
 
         <!-- Job 2 -->
@@ -142,8 +143,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Sunshine, VIC</span>
-            <span>&#128176; $85K – $95K pkg</span>
+            <span>&#128176; $85K - $95K pkg</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
 
         <!-- Job 3 -->
@@ -161,8 +163,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Melbourne CBD</span>
-            <span>&#128176; $68K – $75K + super</span>
+            <span>&#128176; $68K - $75K + super</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
 
         <!-- Job 4 -->
@@ -180,8 +183,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Broadmeadows, VIC</span>
-            <span>&#128176; $32 – $38/hr</span>
+            <span>&#128176; $32 - $38/hr</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
 
         <!-- Job 5 -->
@@ -199,8 +203,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Tullamarine, VIC</span>
-            <span>&#128176; $60K – $68K + super</span>
+            <span>&#128176; $60K - $68K + super</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
 
         <!-- Job 6 -->
@@ -218,8 +223,9 @@
           </div>
           <div class="job-card__meta">
             <span>&#128205; Derrimut, VIC</span>
-            <span>&#128176; $30 – $35/hr</span>
+            <span>&#128176; $30 - $35/hr</span>
           </div>
+          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
         </div>
       </div>
 
