--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recruitment Services — Flexi Personnel</title>
+  <title>Recruitment Services | Flexi Personnel</title>
   <meta name="description" content="Permanent, temporary, labour hire, and RPO recruitment services across Melbourne's key industries.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         Our Services
       </div>
       <h1 class="hero__title" style="font-size:clamp(2rem, 4vw, 3.2rem);">Recruitment solutions that actually work</h1>
-      <p class="hero__subtitle">From one-off hires to fully outsourced recruitment, we flex to fit your business — not the other way around.</p>
+      <p class="hero__subtitle">From one-off hires to fully outsourced recruitment, we flex to fit your business, not the other way around.</p>
     </div>
   </section>
 
@@ -60,8 +60,8 @@
       <div class="service-detail reveal">
         <div>
           <div class="section-header__eyebrow">Permanent Recruitment</div>
-          <h2 style="margin-bottom:var(--space-6);">Find the right person — not just a person</h2>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Hiring the wrong person is expensive. We invest time upfront to understand your culture, your team dynamics, and the real requirements of the role — so the candidate we present isn't just qualified, they're right.</p>
+          <h2 style="margin-bottom:var(--space-6);">Find the right person, not just a person</h2>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Hiring the wrong person is expensive. We invest time upfront to understand your culture, your team dynamics, and the real requirements of the role, so the candidate we present isn't just qualified, they're right.</p>
           <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">Our industry-specialist consultants use deep networks built over 20+ years to source candidates you won't find on job boards alone.</p>
           <a href="contact.html" class="btn btn--primary">Discuss your hire &#8594;</a>
         </div>
@@ -82,8 +82,8 @@
         <div>
           <div class="section-header__eyebrow">Temporary Staffing</div>
           <h2 style="margin-bottom:var(--space-6);">Flex up. Flex down. Stay productive.</h2>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Seasonal surges, unexpected leave, project ramps — whatever the reason, we provide vetted temporary workers who can hit the ground running. We handle onboarding, payroll, and performance management.</p>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">Our temp workforce spans office staff, industrial workers, tradespeople, and healthcare professionals — across Melbourne's North and West.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Seasonal surges, unexpected leave, project ramps: whatever the reason, we provide vetted temporary workers who can hit the ground running. We handle onboarding, payroll, and performance management.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">Our temp workforce spans office staff, industrial workers, tradespeople, and healthcare professionals across Melbourne's North and West.</p>
           <a href="contact.html" class="btn btn--primary">Request temp staff &#8594;</a>
         </div>
         <div class="service-visual" style="background:linear-gradient(135deg, var(--color-secondary-light), #e6fff5);">
@@ -103,8 +103,8 @@
         <div>
           <div class="section-header__eyebrow">Labour Hire</div>
           <h2 style="margin-bottom:var(--space-6);">Reliable workers, every shift</h2>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Manufacturing, food processing, warehousing, construction — we supply skilled and semi-skilled workers who turn up on time, every time. Every worker is inducted, safety-trained, and performance-managed by us.</p>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">We maintain a deep bench of pre-vetted workers so we can fill roles fast — often within 24 hours.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Manufacturing, food processing, warehousing, construction. We supply skilled and semi-skilled workers who turn up on time, every time. Every worker is inducted, safety-trained, and performance-managed by us.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">We maintain a deep bench of pre-vetted workers so we can fill roles fast, often within 24 hours.</p>
           <a href="contact.html" class="btn btn--primary">Get a quote &#8594;</a>
         </div>
         <div class="service-visual" style="background:linear-gradient(135deg, #FEF3C7, #fff8e1);">
@@ -123,8 +123,8 @@
       <div class="service-detail service-detail--reverse reveal">
         <div>
           <div class="section-header__eyebrow">Recruitment Process Outsourcing</div>
-          <h2 style="margin-bottom:var(--space-6);">Your recruitment function — completely handled</h2>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">For organisations with high-volume or ongoing hiring needs, our RPO solution embeds our expertise directly into your operations. We manage the entire recruitment lifecycle — from workforce planning to offer management.</p>
+          <h2 style="margin-bottom:var(--space-6);">Your recruitment function, completely handled</h2>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">For organisations with high-volume or ongoing hiring needs, our RPO solution embeds our expertise directly into your operations. We manage the entire recruitment lifecycle, from workforce planning to offer management.</p>
           <p style="color:var(--color-dark-400);margin-bottom:var(--space-8);line-height:var(--leading-normal);">You get consistent quality, reduced cost-per-hire, and the freedom to focus on running your business.</p>
           <a href="contact.html" class="btn btn--primary">Learn about RPO &#8594;</a>
         </div>
@@ -161,7 +161,7 @@
         </div>
         <div class="process__step">
           <h4>Support</h4>
-          <p>From offer through to onboarding and beyond — we stay involved to ensure success.</p>
+          <p>From offer through to onboarding and beyond, we stay involved to ensure success.</p>
         </div>
       </div>
     </div>
