--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us — Flexi Personnel</title>
+  <title>About Us | Flexi Personnel</title>
   <meta name="description" content="Family-owned recruitment and HR consulting firm serving Melbourne's industries for over 20 years.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         About Us
       </div>
       <h1 class="hero__title" style="font-size:clamp(2rem, 4vw, 3.2rem);">Family-owned. Industry-focused. Partnership-driven.</h1>
-      <p class="hero__subtitle">We've been connecting Melbourne businesses with the right people for over two decades — and we're just getting started.</p>
+      <p class="hero__subtitle">We've been connecting Melbourne businesses with the right people for over two decades, and we're just getting started.</p>
     </div>
   </section>
 
@@ -61,9 +61,9 @@
         <div>
           <div class="section-header__eyebrow">Our Story</div>
           <h2 style="margin-bottom:var(--space-6);">Built on relationships, not transactions</h2>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Flexi Personnel is a family business — and that changes how we operate. We don't take our connections to clients and candidates lightly. Every relationship is an investment, and we put our systems, processes, and people in place to ensure those relationships grow.</p>
-          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Our consultants don't sit behind desks filling orders. They visit worksites, they understand production floors, they know what a good hire looks like in your specific environment — because they've been there.</p>
-          <p style="color:var(--color-dark-400);line-height:var(--leading-normal);">With client partnerships stretching back over 20 years, we've earned the trust of businesses across manufacturing, construction, healthcare, and professional services — and we continue to earn it every day.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Flexi Personnel is a family business, and that changes how we operate. We don't take our connections to clients and candidates lightly. Every relationship is an investment, and we put our systems, processes, and people in place to ensure those relationships grow.</p>
+          <p style="color:var(--color-dark-400);margin-bottom:var(--space-6);line-height:var(--leading-normal);">Our consultants don't sit behind desks filling orders. They visit worksites, they understand production floors, they know what a good hire looks like in your specific environment because they've been there.</p>
+          <p style="color:var(--color-dark-400);line-height:var(--leading-normal);">With client partnerships stretching back over 20 years, we've earned the trust of businesses across manufacturing, construction, healthcare, and professional services, and we continue to earn it every day.</p>
         </div>
         <div class="service-visual" style="background:linear-gradient(135deg, var(--color-primary-light), var(--color-secondary-light));">
           <div style="text-align:center;">
@@ -97,12 +97,12 @@
         <div class="card card--flat reveal reveal-delay-2" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#128171;</div>
           <h4 class="card__title">Integrity</h4>
-          <p class="card__text">Honest advice, transparent processes, and commitments we keep — every time.</p>
+          <p class="card__text">Honest advice, transparent processes, and commitments we keep, every time.</p>
         </div>
         <div class="card card--flat reveal reveal-delay-3" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#9889;</div>
           <h4 class="card__title">Agility</h4>
-          <p class="card__text">We flex to fit your needs — from a single hire to full RPO, and everything in between.</p>
+          <p class="card__text">We flex to fit your needs, from a single hire to full RPO, and everything in between.</p>
         </div>
       </div>
     </div>
@@ -144,7 +144,7 @@
         <div class="card" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#127942;</div>
           <h4 class="card__title">RCSA Corporate Member</h4>
-          <p class="card__text">Member of the Recruitment, Consulting and Staffing Association — Australia's peak industry body.</p>
+          <p class="card__text">Member of the Recruitment, Consulting and Staffing Association, Australia's peak industry body.</p>
         </div>
         <div class="card" style="text-align:center;">
           <div style="font-size:2.5rem;margin-bottom:var(--space-4);">&#9989;</div>
