--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact — Flexi Personnel</title>
+  <title>Contact | Flexi Personnel</title>
   <meta name="description" content="Get in touch with Flexi Personnel. Call, email, or fill out our contact form.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <a href="about.html" class="nav__link">About</a>
       </div>
       <div class="nav__actions">
-        <a href="contact.html" class="btn btn--primary active">Get in Touch</a>
+        <a href="contact.html" class="btn btn--orange">Get in Touch</a>
       </div>
       <button class="nav__toggle" aria-label="Menu"><span></span></button>
     </div>
@@ -50,7 +50,7 @@
         Contact Us
       </div>
       <h1 class="hero__title" style="font-size:clamp(2rem, 4vw, 3.2rem);">Let's start a conversation</h1>
-      <p class="hero__subtitle">Whether you're looking to hire, looking for work, or need HR advice — we're here to help.</p>
+      <p class="hero__subtitle">Whether you're looking to hire, looking for work, or need HR advice, we're here to help.</p>
     </div>
   </section>
 
@@ -128,7 +128,7 @@
                 <div style="width:40px;height:40px;min-width:40px;background:var(--color-light-200);border-radius:var(--radius-md);display:flex;align-items:center;justify-content:center;font-size:1.2rem;">&#128337;</div>
                 <div>
                   <div style="font-weight:600;font-size:var(--text-sm);margin-bottom:var(--space-1);">Business Hours</div>
-                  <p style="color:var(--color-dark-400);font-size:var(--text-sm);">Monday – Friday<br>8:30am – 5:30pm AEST</p>
+                  <p style="color:var(--color-dark-400);font-size:var(--text-sm);">Monday to Friday<br>8:30am to 5:30pm AEST</p>
                 </div>
               </div>
             </div>
