--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexi Personnel — Recruitment &amp; HR Solutions</title>
+  <title>Flexi Personnel | Recruitment &amp; HR Solutions</title>
   <meta name="description" content="Melbourne's trusted recruitment partner. Permanent, temporary, and labour hire staffing across manufacturing, construction, healthcare, and professional sectors.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,7 @@
         We help you find <span>your&nbsp;best.</span>
       </h1>
       <p class="hero__subtitle">
-        Industry-specialist recruitment, temporary staffing, and HR consulting — built on partnerships that last.
+        Industry-specialist recruitment, temporary staffing, and HR consulting, built on partnerships that last.
       </p>
       <div class="hero__actions">
         <a href="employers.html" class="btn btn--primary btn--lg">I'm Hiring &#8594;</a>
@@ -73,13 +73,13 @@
         <div class="hero__card reveal">
           <div class="hero__card-icon" style="background: var(--color-primary-light); color: var(--color-primary);">&#128188;</div>
           <h4>For Employers</h4>
-          <p class="card__text mt-4">Find the right talent across manufacturing, construction, healthcare and professional sectors — fast.</p>
+          <p class="card__text mt-4">Find the right talent across manufacturing, construction, healthcare and professional sectors, fast.</p>
           <a href="employers.html" class="card__link">Explore employer solutions &#8594;</a>
         </div>
         <div class="hero__card reveal reveal-delay-1">
           <div class="hero__card-icon" style="background: var(--color-secondary-light); color: var(--color-orange);">&#128100;</div>
           <h4>For Job Seekers</h4>
-          <p class="card__text mt-4">Whether you want permanent, temp, or contract — our consultants match your goals to the right opportunity.</p>
+          <p class="card__text mt-4">Whether you want permanent, temp, or contract, our consultants match your goals to the right opportunity.</p>
           <a href="jobs.html" class="card__link">Browse open roles &#8594;</a>
         </div>
         <div class="hero__card reveal reveal-delay-2">
@@ -122,7 +122,7 @@
       <div class="section-header section-header--center reveal">
         <div class="section-header__eyebrow">What We Do</div>
         <h2 class="section-header__title">Recruitment solutions tailored to your industry</h2>
-        <p class="section-header__text">Our service teams are structured by industry — so you get consultants who genuinely understand your business, your challenges, and your market.</p>
+        <p class="section-header__text">Our service teams are structured by industry, so you get consultants who genuinely understand your business, your challenges, and your market.</p>
       </div>
       <div class="grid grid--3">
         <div class="card reveal">
@@ -140,7 +140,7 @@
         <div class="card reveal reveal-delay-2">
           <div class="card__icon card__icon--dark">&#127981;</div>
           <h4 class="card__title">Labour Hire</h4>
-          <p class="card__text">Reliable workers for manufacturing, industrial, and construction environments — vetted, trained, and ready to start.</p>
+          <p class="card__text">Reliable workers for manufacturing, industrial, and construction environments. Vetted, trained, and ready to start.</p>
           <a href="services.html" class="card__link">Learn more &#8594;</a>
         </div>
         <div class="card reveal">
@@ -178,7 +178,7 @@
               <div style="width:32px;height:32px;min-width:32px;background:var(--color-primary-light);border-radius:var(--radius-md);display:flex;align-items:center;justify-content:center;color:var(--color-primary);font-size:1rem;">&#10003;</div>
               <div>
                 <strong>Industry-structured teams</strong>
-                <p style="font-size:var(--text-sm);color:var(--color-dark-400);margin-top:var(--space-1);">Every consultant specialises in a sector — not a desk of random roles.</p>
+                <p style="font-size:var(--text-sm);color:var(--color-dark-400);margin-top:var(--space-1);">Every consultant specialises in a sector, not a desk of random roles.</p>
               </div>
             </div>
             <div style="display:flex;align-items:flex-start;gap:var(--space-4);">
@@ -192,7 +192,7 @@
               <div style="width:32px;height:32px;min-width:32px;background:#FEF3C7;border-radius:var(--radius-md);display:flex;align-items:center;justify-content:center;color:var(--color-warning);font-size:1rem;">&#10003;</div>
               <div>
                 <strong>Long-term partnerships</strong>
-                <p style="font-size:var(--text-sm);color:var(--color-dark-400);margin-top:var(--space-1);">Client relationships stretching back 20+ years — we grow with you.</p>
+                <p style="font-size:var(--text-sm);color:var(--color-dark-400);margin-top:var(--space-1);">Client relationships stretching back 20+ years. We grow with you.</p>
               </div>
             </div>
           </div>
