--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </section>
 
   <!-- Stats -->
-  <section class="section--sm bg-light">
+  <section class="section--sm bg-dark-stats">
     <div class="container">
       <div class="stats reveal">
         <div class="stat">
@@ -117,7 +117,7 @@
   </section>
 
   <!-- Services Overview -->
-  <section class="section" id="services">
+  <section class="section bg-light" id="services">
     <div class="container">
       <div class="section-header section-header--center reveal">
         <div class="section-header__eyebrow">What We Do</div>
@@ -166,7 +166,7 @@
   </section>
 
   <!-- Why Choose Us -->
-  <section class="section bg-light">
+  <section class="section">
     <div class="container">
       <div class="service-detail reveal">
         <div>
@@ -209,7 +209,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section class="section">
+  <section class="section bg-light">
     <div class="container">
       <div class="section-header section-header--center reveal">
         <div class="section-header__eyebrow">Testimonials</div>
