--- a/jobs.html
+++ b/jobs.html
@@ -125,7 +125,7 @@
             <span>&#128205; Campbellfield, VIC</span>
             <span>&#128176; $72K - $82K + super</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
 
         <!-- Job 2 -->
@@ -145,7 +145,7 @@
             <span>&#128205; Sunshine, VIC</span>
             <span>&#128176; $85K - $95K pkg</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
 
         <!-- Job 3 -->
@@ -165,7 +165,7 @@
             <span>&#128205; Melbourne CBD</span>
             <span>&#128176; $68K - $75K + super</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
 
         <!-- Job 4 -->
@@ -185,7 +185,7 @@
             <span>&#128205; Broadmeadows, VIC</span>
             <span>&#128176; $32 - $38/hr</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
 
         <!-- Job 5 -->
@@ -205,7 +205,7 @@
             <span>&#128205; Tullamarine, VIC</span>
             <span>&#128176; $60K - $68K + super</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
 
         <!-- Job 6 -->
@@ -225,7 +225,7 @@
             <span>&#128205; Derrimut, VIC</span>
             <span>&#128176; $30 - $35/hr</span>
           </div>
-          <a href="job-detail.html" class="job-card__link">View Details &#8594;</a>
+          <a href="job-detail.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
       </div>
 
