--- a/job-detail.html
+++ b/job-detail.html
@@ -42,47 +42,68 @@
     </div>
   </nav>
 
-  <!-- Breadcrumb -->
-  <section style="background:var(--color-light-100);border-bottom:1px solid var(--color-light-300);">
-    <div class="container" style="padding-top:var(--space-4);padding-bottom:var(--space-4);">
-      <div style="display:flex;align-items:center;gap:var(--space-2);font-size:var(--text-sm);color:var(--color-dark-400);">
-        <a href="jobs.html" style="color:var(--color-primary);text-decoration:none;">Job Seekers</a>
-        <span>/</span>
-        <span>Production Line Supervisor</span>
+  <!-- Job Detail Hero -->
+  <section class="jd-hero">
+    <div class="jd-hero__bg"></div>
+    <div class="container">
+      <div class="jd-hero__inner">
+        <a href="jobs.html" class="jd-hero__back">&#8592; Back to all roles</a>
+        <div class="jd-hero__tags">
+          <span class="tag tag--blue" style="font-size:var(--text-sm);padding:var(--space-2) var(--space-4);">Permanent</span>
+          <span class="tag" style="font-size:var(--text-sm);padding:var(--space-2) var(--space-4);background:rgba(255,255,255,0.15);color:white;">Manufacturing</span>
+          <span class="tag" style="font-size:var(--text-sm);padding:var(--space-2) var(--space-4);background:rgba(255,255,255,0.15);color:white;">Full-time</span>
+        </div>
+        <h1 class="jd-hero__title">Production Line Supervisor</h1>
+        <div class="jd-hero__company">Food Manufacturing Co.</div>
+        <div class="jd-hero__meta">
+          <div class="jd-hero__meta-item">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+            Campbellfield, VIC
+          </div>
+          <div class="jd-hero__meta-item">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
+            $72,000 - $82,000 + super
+          </div>
+          <div class="jd-hero__meta-item">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+            Posted 3 days ago
+          </div>
+          <div class="jd-hero__meta-item">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>
+            Ref: FP-2026-0142
+          </div>
+        </div>
+        <div class="jd-hero__actions">
+          <a href="contact.html" class="btn btn--primary btn--lg">Apply Now &#8594;</a>
+          <a href="tel:0393609722" class="btn btn--outline btn--lg" style="border-color:rgba(255,255,255,0.3);color:white;">Call (03) 9360 9722</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Job Detail -->
+  <!-- Job Detail Content -->
   <section class="section">
     <div class="container">
-      <div class="job-detail reveal">
-        <!-- Main Content -->
-        <div class="job-detail__main">
-          <div class="job-detail__header">
-            <div class="job-detail__tags" style="margin-bottom:var(--space-4);">
-              <span class="tag tag--blue">Permanent</span>
-              <span class="tag">Manufacturing</span>
-              <span class="tag">Full-time</span>
-            </div>
-            <h1 class="job-detail__title">Production Line Supervisor</h1>
-            <div class="job-detail__company">Food Manufacturing Co.</div>
-            <div class="job-detail__meta">
-              <span>&#128205; Campbellfield, VIC</span>
-              <span>&#128176; $72,000 - $82,000 + super</span>
-              <span>&#128197; Posted 3 days ago</span>
-            </div>
-          </div>
+      <div class="jd-layout">
 
-          <div class="job-detail__section">
-            <h3>About the role</h3>
+        <!-- Main Content -->
+        <div class="jd-content">
+
+          <div class="jd-card reveal">
+            <div class="jd-card__icon" style="background:var(--color-primary-light);color:var(--color-primary);">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
+            </div>
+            <h2 class="jd-card__title">About the role</h2>
             <p>We are seeking an experienced Production Line Supervisor to join a well-established food manufacturing company in Campbellfield. Reporting to the Production Manager, you will be responsible for overseeing daily production operations across multiple lines, ensuring output targets are met safely and efficiently.</p>
             <p>This is an excellent opportunity for someone with a hands-on approach who thrives in fast-paced manufacturing environments and enjoys leading teams to deliver consistent, high-quality results.</p>
           </div>
 
-          <div class="job-detail__section">
-            <h3>Key responsibilities</h3>
-            <ul>
+          <div class="jd-card reveal">
+            <div class="jd-card__icon" style="background:var(--color-secondary-light);color:var(--color-secondary-dark);">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 11 12 14 22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/></svg>
+            </div>
+            <h2 class="jd-card__title">Key responsibilities</h2>
+            <ul class="jd-checklist">
               <li>Supervise and coordinate daily production activities across assigned lines</li>
               <li>Manage, mentor, and develop a team of 15-20 production workers</li>
               <li>Ensure production targets, quality standards, and safety requirements are met</li>
@@ -94,9 +115,12 @@
             </ul>
           </div>
 
-          <div class="job-detail__section">
-            <h3>About you</h3>
-            <ul>
+          <div class="jd-card reveal">
+            <div class="jd-card__icon" style="background:var(--color-orange-light);color:var(--color-orange);">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+            </div>
+            <h2 class="jd-card__title">About you</h2>
+            <ul class="jd-checklist jd-checklist--orange">
               <li>3+ years of experience in a production supervisor or team leader role</li>
               <li>Background in food manufacturing, FMCG, or similar production environments</li>
               <li>Strong leadership skills with the ability to motivate and develop teams</li>
@@ -107,9 +131,12 @@
             </ul>
           </div>
 
-          <div class="job-detail__section">
-            <h3>What's on offer</h3>
-            <ul>
+          <div class="jd-card reveal">
+            <div class="jd-card__icon" style="background:#FEF3C7;color:var(--color-warning);">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
+            </div>
+            <h2 class="jd-card__title">What's on offer</h2>
+            <ul class="jd-checklist jd-checklist--green">
               <li>Competitive salary of $72,000 - $82,000 plus superannuation</li>
               <li>Permanent, full-time position with a stable, growing company</li>
               <li>Career development opportunities within the organisation</li>
@@ -118,10 +145,13 @@
             </ul>
           </div>
 
-          <div class="job-detail__apply">
-            <h3>Interested in this role?</h3>
-            <p>Click below to apply or call our team directly to discuss the opportunity.</p>
-            <div style="display:flex;gap:var(--space-4);flex-wrap:wrap;margin-top:var(--space-6);">
+          <!-- Apply CTA inline -->
+          <div class="jd-apply-card reveal">
+            <div>
+              <h3>Ready to apply?</h3>
+              <p>Click below to submit your application, or call our manufacturing team to chat about this role.</p>
+            </div>
+            <div class="jd-apply-card__actions">
               <a href="contact.html" class="btn btn--primary btn--lg">Apply Now &#8594;</a>
               <a href="tel:0393609722" class="btn btn--outline btn--lg">Call (03) 9360 9722</a>
             </div>
@@ -129,66 +159,103 @@
         </div>
 
         <!-- Sidebar -->
-        <div class="job-detail__sidebar">
-          <div class="job-detail__sidebar-card">
+        <aside class="jd-sidebar">
+
+          <!-- Quick Apply -->
+          <div class="jd-sidebar__card jd-sidebar__card--cta reveal">
+            <h4>Quick apply</h4>
+            <p style="font-size:var(--text-sm);color:rgba(255,255,255,0.75);margin-bottom:var(--space-5);">Send your details and our team will be in touch within 24 hours.</p>
+            <a href="contact.html" class="btn btn--primary" style="width:100%;justify-content:center;">Apply for this role &#8594;</a>
+          </div>
+
+          <!-- Job Summary -->
+          <div class="jd-sidebar__card reveal">
             <h4>Job summary</h4>
-            <div class="job-detail__sidebar-row">
-              <span class="job-detail__sidebar-label">Location</span>
-              <span>Campbellfield, VIC</span>
-            </div>
-            <div class="job-detail__sidebar-row">
-              <span class="job-detail__sidebar-label">Salary</span>
-              <span>$72K - $82K + super</span>
-            </div>
-            <div class="job-detail__sidebar-row">
-              <span class="job-detail__sidebar-label">Job type</span>
-              <span>Permanent, Full-time</span>
-            </div>
-            <div class="job-detail__sidebar-row">
-              <span class="job-detail__sidebar-label">Industry</span>
-              <span>Manufacturing</span>
-            </div>
-            <div class="job-detail__sidebar-row">
-              <span class="job-detail__sidebar-label">Reference</span>
-              <span>FP-2026-0142</span>
+            <div class="jd-sidebar__rows">
+              <div class="jd-sidebar__row">
+                <div class="jd-sidebar__row-icon">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                </div>
+                <div>
+                  <div class="jd-sidebar__row-label">Location</div>
+                  <div class="jd-sidebar__row-value">Campbellfield, VIC</div>
+                </div>
+              </div>
+              <div class="jd-sidebar__row">
+                <div class="jd-sidebar__row-icon">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
+                </div>
+                <div>
+                  <div class="jd-sidebar__row-label">Salary</div>
+                  <div class="jd-sidebar__row-value">$72K - $82K + super</div>
+                </div>
+              </div>
+              <div class="jd-sidebar__row">
+                <div class="jd-sidebar__row-icon">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>
+                </div>
+                <div>
+                  <div class="jd-sidebar__row-label">Job type</div>
+                  <div class="jd-sidebar__row-value">Permanent, Full-time</div>
+                </div>
+              </div>
+              <div class="jd-sidebar__row">
+                <div class="jd-sidebar__row-icon">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
+                </div>
+                <div>
+                  <div class="jd-sidebar__row-label">Industry</div>
+                  <div class="jd-sidebar__row-value">Manufacturing</div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="job-detail__sidebar-card" style="background:var(--color-dark);color:white;">
-            <h4 style="color:white;">Why apply through Flexi?</h4>
-            <div style="display:flex;flex-direction:column;gap:var(--space-3);font-size:var(--text-sm);color:rgba(255,255,255,0.8);">
-              <div style="display:flex;align-items:flex-start;gap:var(--space-3);">
-                <span style="color:var(--color-secondary);">&#10003;</span>
+          <!-- Why Flexi -->
+          <div class="jd-sidebar__card reveal">
+            <h4>Why apply through Flexi?</h4>
+            <div class="jd-sidebar__benefits">
+              <div class="jd-sidebar__benefit">
+                <div class="jd-sidebar__benefit-icon">&#10003;</div>
                 <span>Direct access to the hiring manager</span>
               </div>
-              <div style="display:flex;align-items:flex-start;gap:var(--space-3);">
-                <span style="color:var(--color-secondary);">&#10003;</span>
+              <div class="jd-sidebar__benefit">
+                <div class="jd-sidebar__benefit-icon">&#10003;</div>
                 <span>Interview coaching and preparation</span>
               </div>
-              <div style="display:flex;align-items:flex-start;gap:var(--space-3);">
-                <span style="color:var(--color-secondary);">&#10003;</span>
+              <div class="jd-sidebar__benefit">
+                <div class="jd-sidebar__benefit-icon">&#10003;</div>
                 <span>Salary negotiation support</span>
               </div>
-              <div style="display:flex;align-items:flex-start;gap:var(--space-3);">
-                <span style="color:var(--color-secondary);">&#10003;</span>
+              <div class="jd-sidebar__benefit">
+                <div class="jd-sidebar__benefit-icon">&#10003;</div>
                 <span>Ongoing career support after placement</span>
               </div>
             </div>
           </div>
 
-          <div class="job-detail__sidebar-card">
+          <!-- Your Consultant -->
+          <div class="jd-sidebar__card reveal">
             <h4>Your consultant</h4>
-            <div style="display:flex;align-items:center;gap:var(--space-4);margin-bottom:var(--space-4);">
-              <div style="width:48px;height:48px;min-width:48px;background:var(--color-primary-light);border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--color-primary);">FP</div>
+            <div class="jd-sidebar__consultant">
+              <div class="jd-sidebar__consultant-avatar">FP</div>
               <div>
-                <div style="font-weight:600;">Flexi Personnel</div>
-                <div style="font-size:var(--text-sm);color:var(--color-dark-400);">Manufacturing Team</div>
+                <div class="jd-sidebar__consultant-name">Flexi Personnel</div>
+                <div class="jd-sidebar__consultant-role">Manufacturing Team</div>
               </div>
             </div>
-            <a href="tel:0393609722" style="display:block;color:var(--color-primary);font-weight:600;font-size:var(--text-sm);margin-bottom:var(--space-2);">(03) 9360 9722</a>
-            <a href="mailto:info@flexipersonnel.com.au" style="display:block;color:var(--color-primary);font-weight:600;font-size:var(--text-sm);">info@flexipersonnel.com.au</a>
+            <div class="jd-sidebar__consultant-contact">
+              <a href="tel:0393609722">
+                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+                (03) 9360 9722
+              </a>
+              <a href="mailto:info@flexipersonnel.com.au">
+                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+                info@flexipersonnel.com.au
+              </a>
+            </div>
           </div>
-        </div>
+        </aside>
       </div>
     </div>
   </section>
@@ -196,7 +263,7 @@
   <!-- Related Jobs -->
   <section class="section bg-light">
     <div class="container">
-      <div class="section-header reveal">
+      <div class="section-header section-header--center reveal">
         <div class="section-header__eyebrow">More Opportunities</div>
         <h2 class="section-header__title">Similar roles you might like</h2>
       </div>
@@ -216,7 +283,7 @@
             <span>&#128205; Derrimut, VIC</span>
             <span>&#128176; $30 - $35/hr</span>
           </div>
-          <a href="jobs.html" class="job-card__link">View Details &#8594;</a>
+          <a href="jobs.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
         <div class="job-card">
           <div class="job-card__header">
@@ -233,7 +300,7 @@
             <span>&#128205; Sunshine, VIC</span>
             <span>&#128176; $85K - $95K pkg</span>
           </div>
-          <a href="jobs.html" class="job-card__link">View Details &#8594;</a>
+          <a href="jobs.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
         <div class="job-card">
           <div class="job-card__header">
@@ -250,7 +317,7 @@
             <span>&#128205; Tullamarine, VIC</span>
             <span>&#128176; $60K - $68K + super</span>
           </div>
-          <a href="jobs.html" class="job-card__link">View Details &#8594;</a>
+          <a href="jobs.html" class="btn btn--outline-sm">View Details &#8594;</a>
         </div>
       </div>
     </div>
